--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -33,6 +33,8 @@
                         &#xA0;<span translate="global.menu.entities.apartment">Apartment</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="location" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.location">Location</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="price" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.price">Price</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
