Added ApartmentSale ApartmentSale extends Apartment

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -37,6 +37,8 @@
                         &#xA0;<span translate="global.menu.entities.price">Price</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="apartmentRent" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.apartmentRent">Apartment rent</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="apartmentSale" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.apartmentSale">Apartment sale</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
